Frankbelford/uatv1ba/force-app/main/default/objects/Contact_Site_link__c/Contact_Site_link__c.object-meta.xml
<CustomObject>
    <description>Link between Contacts and Sites allowing a many to many relationship</description>
    <label>Contact / Site link</label>
    <nameField>
        <displayFormat>LINKID-{000000}</displayFormat>
        <label>Contact / Site link</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact / Site links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>