Frankbelford/uatv1ba/force-app/main/default/objects/Contact_Site_link__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contact / Site links</relationshipLabel>
    <relationshipName>Contact_Site_links</relationshipName>
    <type>Lookup</type>
</CustomField>