Frankbelford/uatv1ba/force-app/main/default/objects/Contact_Site_link__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <formula>IP_Site__r.Brand__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand</label>
    <type>Text</type>
</CustomField>