Frankbelford/uatv1ba/force-app/main/default/objects/Contact_Site_link__c/fields/IP_Contact__c.field-meta.xml
<CustomField>
    <fullName>IP_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact / Site links (Contact)</relationshipLabel>
    <relationshipName>Contact_Site_links1</relationshipName>
    <type>Lookup</type>
</CustomField>