Frankbelford/uatv1ba/force-app/main/default/objects/Contact_Site_link__c/fields/IP_Department__c.field-meta.xml
<CustomField>
    <fullName>IP_Department__c</fullName>
    <formula>IP_Contact__r.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department</label>
    <type>Text</type>
</CustomField>