Frankbelford/uatv1ba/force-app/main/default/objects/Contact_Site_link__c/fields/IP_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>IP_Job_Title__c</fullName>
    <formula>IP_Contact__r.IP_JobTitle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Title</label>
    <type>Text</type>
</CustomField>