Frankbelford/uatv1ba/force-app/main/default/objects/Contact_Site_link__c/fields/IP_Phone__c.field-meta.xml
<CustomField>
    <fullName>IP_Phone__c</fullName>
    <formula>IF((!ISBLANK(IP_Contact__r.Phone) &amp;&amp; !ISBLANK(IP_Contact__r.MobilePhone)), IP_Contact__r.MobilePhone,
IF(ISBLANK(IP_Contact__r.Phone), IP_Contact__r.MobilePhone,
IP_Contact__r.Phone))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>