Frankbelford/uatv1ba/force-app/main/default/objects/Contact_Site_link__c/fields/IP_PortalType__c.field-meta.xml
<CustomField>
    <fullName>IP_PortalType__c</fullName>
    <label>Portal Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Hours Approver</fullName>
            </value>
            <value>
                <fullName>Secondary Hours Approver</fullName>
            </value>
            <value>
                <fullName>Escalation Hours Approver</fullName>
            </value>
            <value>
                <fullName>Viewer</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>VMS - Hours Approver</fullName>
            </value>
            <value>
                <fullName>VMS - Authorised Booker</fullName>
            </value>
            <value>
                <fullName>VMS User</fullName>
                <isActive>false</isActive>
                <label>VMS User</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>