Frankbelford/uatv1ba/force-app/main/default/objects/Contact_Site_link__c/fields/IP_Site__c.field-meta.xml
<CustomField>
    <fullName>IP_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>sirenum__Site__c.sirenum__Operating_Company__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>sirenum__Site__c</referenceTo>
    <relationshipLabel>Contact / Site links (Site2)</relationshipLabel>
    <relationshipName>Contact_Site_links1</relationshipName>
    <type>Lookup</type>
</CustomField>